[gd_scene load_steps=8 format=3 uid="uid://ixr7pgo6m2cb"]

[ext_resource type="Script" uid="uid://bafoo5cr1v5x1" path="res://script/main.gd" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://rsbush3fd7rw" path="res://icon.svg" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://dil4rfpevhssw" path="res://script/kitty_spawner.gd" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://c0x4rkhtlr0nf" path="res://scenes/kitty.tscn" id="4_jyhfs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0wfyh"]

[sub_resource type="Theme" id="Theme_sugp2"]
RichTextLabel/styles/normal = SubResource("StyleBoxEmpty_0wfyh")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(104, 92)

[node name="Main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClickButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 479.0
offset_top = 249.0
offset_right = 672.0
offset_bottom = 405.0
text = "GATHER CATNIP"

[node name="CatnipLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 500.0
offset_top = 176.0
offset_right = 615.0
offset_bottom = 221.0
text = "Catnip: 0"
scroll_active = false
autowrap_mode = 0

[node name="DPSLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 55.0
offset_top = 27.0
offset_right = 170.0
offset_bottom = 72.0
theme = SubResource("Theme_sugp2")
text = "DPS"
scroll_active = false
autowrap_mode = 0

[node name="LivingSituation" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 887.0
offset_top = 19.0
offset_right = 1104.0
offset_bottom = 64.0
theme = SubResource("Theme_sugp2")
text = "Your living situation: bRoKe"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="StatusLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 885.0
offset_top = 51.0
offset_right = 1102.0
offset_bottom = 96.0
theme = SubResource("Theme_sugp2")
text = "Your status: homeless"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CoinLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 887.0
offset_top = 81.0
offset_right = 1104.0
offset_bottom = 126.0
theme = SubResource("Theme_sugp2")
text = "Your money: -50"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ClickpowerLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 122.0
offset_top = 68.0
offset_right = 237.0
offset_bottom = 113.0
theme = SubResource("Theme_sugp2")
text = "Clickpower: 1"
scroll_active = false
autowrap_mode = 0

[node name="Upgrade1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 875.0
offset_top = 260.0
offset_right = 1097.0
offset_bottom = 336.0
tooltip_text = "Who wants to click when someone else can do that for you?"
text = "Hire worker : 100"

[node name="UltimateUpgrade" type="Button" parent="Control"]
layout_mode = 0
offset_left = 80.0
offset_top = 336.0
offset_right = 288.0
offset_bottom = 430.0
text = "ULTIMATE UPGRADE: DRAG YOUR CATNIP STACK AROUND: 1 BILLION CATNIP"
autowrap_mode = 1

[node name="Sell" type="Button" parent="Control"]
layout_mode = 0
offset_left = 879.0
offset_top = 141.0
offset_right = 1087.0
offset_bottom = 235.0
tooltip_text = "Sell cat pics online for money!"
text = "Sell pic"
autowrap_mode = 1

[node name="ArmUpgrade" type="Button" parent="Control"]
layout_mode = 0
offset_left = 68.0
offset_top = 103.0
offset_right = 297.0
offset_bottom = 187.0
tooltip_text = "Train your arms so you can gather more catnip at once!"
text = "upgrade clickpower: 50"

[node name="Timer" type="Timer" parent="Control"]
autostart = true

[node name="KittySpawner" type="Node2D" parent="."]
scale = Vector2(0.296875, 0.257813)
script = ExtResource("2_jyhfs")
object_to_spawn = ExtResource("4_jyhfs")

[node name="Label" type="Label" parent="KittySpawner"]
visible = false
offset_left = 623.158
offset_top = 2323.39
offset_right = 1308.16
offset_bottom = 2358.39
theme_override_font_sizes/font_size = 95
text = "OMG is that a Kadse??!!! Quick! Tap on it to take pictures!"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1038, 559)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="CatnipStack" type="Sprite2D" parent="Area2D"]
texture = ExtResource("2_0wfyh")

[connection signal="pressed" from="Control/ClickButton" to="." method="_on_click_button_pressed"]
[connection signal="pressed" from="Control/Upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="Control/Sell" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="Control/ArmUpgrade" to="." method="_on_arm_upgrade_pressed"]
[connection signal="timeout" from="Control/Timer" to="." method="_on_timer_timeout"]
